--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,41 +1,14 @@
 set-option -g default-shell /bin/zsh
-
-set-option -g status-keys vi
-set-option -g mode-keys vi
-
-set -g default-terminal "screen-256color"
+setw -g mode-keys vi
 set -g mouse on
-
-#switch panels
-bind k selectp -U # switch to panel Up
-bind j selectp -D # switch to panel Down 
-bind h selectp -L # switch to panel Left
-bind l selectp -R # switch to panel Right
 
 # remap prefix to Control + a
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf; display "Reloaded"
-
 bind Escape copy-mode
 bind p paste-buffer
-
-# shorten command delay
-set -sg escape-time 1
-
-# use PREFIX | to split window horizontally and PREFIX - to split vertically
-bind h split-window -h
-bind v split-window -v
-
-# resize panes like vim
-bind < resize-pane -L 5
-bind > resize-pane -R 5
-bind - resize-pane -D 5
-bind + resize-pane -U 5
 
 unbind [
 bind [ previous-window
@@ -44,8 +17,9 @@ bind ] next-window
 
 bind C-q command-prompt -I "sudo htop" -p "Quick window command: " "new-window '%%'"
 
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+bind -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "pbcopy"
+
 bind C-c run "tmux save-buffer - | pbcopy"
 bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
@@ -59,7 +33,6 @@ set -g pane-active-border-fg brightred
 
 ## Status bar design
 # status line
-set -g status-utf8 on
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -77,8 +50,6 @@ set-option -g visual-bell off
 set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
-
-set -g default-terminal "screen-256color"
 
 # The modes {
 setw -g clock-mode-colour colour153
@@ -102,7 +73,7 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour243,bold] #(uptime | cut -f 4-5 -d " " | cut -f 1 -d ",") #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
 
 setw -g window-status-current-fg colour81
 setw -g window-status-current-bg colour238
@@ -126,3 +97,18 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+# tmux plugin manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'knakayama/tmux-uptime'
+
+
+run '~/.tmux/plugins/tpm/tpm'
