tmux-scroll-copy-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
 set-option -g default-shell /bin/zsh
+set-option -g mouse on
 setw -g mode-keys vi
-set -g mouse on
 
 # remap prefix to Control + a
 set -g prefix C-a
@@ -109,6 +109,7 @@ set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'knakayama/tmux-uptime'
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 
 
 run '~/.tmux/plugins/tpm/tpm'
