--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
 	lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
 	in = "!git remote update -p; git log ..@{u}"
 	out = log @{u}..
+	d = difftool
 [push]
 	default = simple
 [filter "media"]
@@ -35,3 +36,5 @@
 	tool = vimdiff
 [github]
 	user = decayofmind
+[difftool]
+	prompt = false
