--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ set -g pane-active-border-fg brightred
 # status line
 set -g status-justify left
 set -g status-bg default
-set -g status-fg colour12
+set -g status-fg colour14
 set -g status-interval 2
 
 # messaging
@@ -73,10 +73,11 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#{prefix_highlight} #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#[default]#{prefix_highlight} #[fg=colour246]#{spotify_status} #{spotify_artist}: #[fg=colour251]#{spotify_track}  #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right-length 160
 
 setw -g window-status-current-fg colour81
-setw -g window-status-current-bg colour238
+setw -g window-status-current-bg colour242
 setw -g window-status-current-attr bold
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 
@@ -103,13 +104,18 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @prefix_highlight_fg 'brightwhite'
+set -g @prefix_highlight_bg 'blue'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'knakayama/tmux-uptime'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
-
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'robhurring/tmux-spotify'
+set -g @spotify_playing_icon '♫'
+set -g @spotify_paused_icon ' '
+set -g @plugin 'robhurring/tmux-uptime'
 
 run '~/.tmux/plugins/tpm/tpm'
