--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,9 +3,9 @@ set-option -g mouse on
 setw -g mode-keys vi
 
 # remap prefix to Control + a
-set -g prefix C-a
+set -g prefix M-a
 unbind C-b
-bind C-a send-prefix
+bind M-a send-prefix
 
 bind Escape copy-mode
 bind p paste-buffer
@@ -14,14 +14,17 @@ unbind [
 bind [ previous-window
 unbind ]
 bind ] next-window
+unbind M-TAB
+bind -n M-TAB next-window
 
 bind C-q command-prompt -I "sudo htop" -p "Quick window command: " "new-window '%%'"
 
+unbind -t vi-copy v
 bind -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "pbcopy"
+bind -t vi-copy y copy-pipe "pbcopy"
+bind -t vi-copy C-v rectangle-toggle
 
-bind C-c run "tmux save-buffer - | pbcopy"
-bind C-v run "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+bind -n C-c run "tmux save-buffer - | pbcopy"
 
 
 #################################################################
@@ -73,7 +76,7 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[default]#{prefix_highlight} #[fg=colour246]#{spotify_status} #{spotify_artist}: #[fg=colour251]#{spotify_track}  #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-right '#[default]#{prefix_highlight} #[fg=colour246]#{spotify_status} #{spotify_artist}: #[fg=colour251]#{spotify_track}  #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S #[default]'
 set -g status-right-length 160
 
 setw -g window-status-current-fg colour81
