--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,11 @@ set-option -g default-shell /bin/zsh
 set-option -g mouse on
 setw -g mode-keys vi
 
+set -g set-titles on
+
+setw -g automatic-rename on
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+
 # remap prefix to Control + a
 set -g prefix M-a
 unbind C-b
@@ -17,14 +22,23 @@ bind ] next-window
 unbind M-TAB
 bind -n M-TAB next-window
 
-bind C-q command-prompt -I "sudo htop" -p "Quick window command: " "new-window '%%'"
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
+bind x kill-pane
+set -g base-index 1
+
+bind C-q command-prompt -I "htop" -p "Quick window command: " "new-window '%%'"
+
+# copy/paste
 unbind -t vi-copy v
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe "pbcopy"
+bind -t vi-copy c copy-pipe "pbcopy"
 bind -t vi-copy C-v rectangle-toggle
-
-bind -n C-c run "tmux save-buffer - | pbcopy"
 
 
 #################################################################
@@ -48,11 +62,11 @@ set -g message-command-fg blue
 set -g message-command-bg black
 
 # loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
 
 # The modes {
 setw -g clock-mode-colour colour153
@@ -76,7 +90,8 @@ set -g status-bg colour234
 set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
-set -g status-right '#[default]#{prefix_highlight} #[fg=colour246]#{spotify_status} #{spotify_artist}: #[fg=colour251]#{spotify_track}  #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S #[default]'
+#set -g status-right '#[default]#{prefix_highlight} #[fg=colour246]#{spotify_status} #{spotify_artist}: #[fg=colour251]#{spotify_track}  #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S #[default]'
+set -g status-right '#[default]#{prefix_highlight} #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S #[default]'
 set -g status-right-length 160
 
 setw -g window-status-current-fg colour81
