--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,11 @@
 set-option -g default-shell /bin/zsh
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
 set-option -g mouse on
 setw -g mode-keys vi
 
 set -g set-titles on
+set -g allow-rename off
 
 setw -g automatic-rename on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -34,11 +37,11 @@ set -g base-index 1
 bind C-q command-prompt -I "htop" -p "Quick window command: " "new-window '%%'"
 
 # copy/paste
-unbind -t vi-copy v
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-pipe "pbcopy"
-bind -t vi-copy c copy-pipe "pbcopy"
-bind -t vi-copy C-v rectangle-toggle
+unbind -Tcopy-mode-vi v
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind -Tcopy-mode-vi c send -X copy-pipe "reattach-to-user-namespace pbcopy"
+bind -Tcopy-mode-vi C-v send -X rectangle-toggle
 
 
 #################################################################
@@ -91,7 +94,7 @@ set -g status-fg colour137
 set -g status-attr dim
 set -g status-left ''
 #set -g status-right '#[default]#{prefix_highlight} #[fg=colour246]#{spotify_status} #{spotify_artist}: #[fg=colour251]#{spotify_track}  #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S #[default]'
-set -g status-right '#[default]#{prefix_highlight} #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S #[default]'
+set -g status-right '#[default]#{prefix_highlight} #[fg=colour233,bg=colour239,bold] @#H  #[fg=colour233,bg=colour241,bold] #{battery_percentage} #[fg=colour233,bg=colour243,bold] #{uptime} #[fg=colour233,bg=colour245,bold] %d/%m #[fg=colour233,bg=colour247,bold] %H:%M:%S #[default]'
 set -g status-right-length 160
 
 setw -g window-status-current-fg colour81
@@ -126,14 +129,19 @@ set -g @prefix_highlight_fg 'brightwhite'
 set -g @prefix_highlight_bg 'blue'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
-set -g @plugin 'robhurring/tmux-spotify'
-set -g @spotify_playing_icon '♫'
-set -g @spotify_paused_icon ' '
+#set -g @plugin 'robhurring/tmux-spotify'
+#set -g @spotify_playing_icon '♫'
+#set -g @spotify_paused_icon ' '
 set -g @plugin 'robhurring/tmux-uptime'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'decayofmind/tmux-open'
+set -g @open 'x'
+set -g @open-editor 'C-x'
 
 run '~/.tmux/plugins/tpm/tpm'
