Tmux is OS-aware now. More features

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
-set-option -g default-shell /bin/zsh
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+set-option -g default-shell ${SHELL}
+if-shell 'test "$(uname -s)" = Darwin' 'set -g default-command "reattach-to-user-namespace -l ${SHELL}"'
 
 set-option -g mouse on
 setw -g mode-keys vi
@@ -10,7 +10,7 @@ set -g allow-rename off
 setw -g automatic-rename on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# remap prefix to Control + a
+# remap prefix to Meta + a
 set -g prefix M-a
 unbind C-b
 bind M-a send-prefix
@@ -35,12 +35,20 @@ bind x kill-pane
 set -g base-index 1
 
 bind C-q command-prompt -I "htop" -p "Quick window command: " "new-window '%%'"
+bind m command-prompt -I colour160 -p color,active-title "set-window-option window-status-format '#[fg=white,bg=%1] #I #W '; set-window-option window-status-current-format '#[fg=white,bg=%1,noreverse,bold] #I #W%2 '"
 
 # copy/paste
 unbind -Tcopy-mode-vi v
 bind -Tcopy-mode-vi v send -X begin-selection
-bind -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
-bind -Tcopy-mode-vi c send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+# OSX
+# bind -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+# bind -Tcopy-mode-vi c send -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Linux
+#bind -Tcopy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
+#bind -Tcopy-mode-vi c send -X copy-pipe "xclip -sel clip -i"
+
 bind -Tcopy-mode-vi C-v send -X rectangle-toggle
 
 
@@ -133,13 +141,16 @@ set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-logging'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @shell_mode 'vi'
+set -g @plugin 'Morantron/tmux-fingers'
+set -g @fingers-compact-hints 0
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
 #set -g @plugin 'robhurring/tmux-spotify'
 #set -g @spotify_playing_icon '♫'
 #set -g @spotify_paused_icon ' '
 set -g @plugin 'robhurring/tmux-uptime'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'decayofmind/tmux-open'
 set -g @open 'x'
 set -g @open-editor 'C-x'
