Add tmux-cluster plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,14 +41,6 @@ bind m command-prompt -I colour160 -p color,active-title "set-window-option wind
 unbind -Tcopy-mode-vi v
 bind -Tcopy-mode-vi v send -X begin-selection
 
-# OSX
-# bind -Tcopy-mode-vi y send -X copy-pipe "reattach-to-user-namespace pbcopy"
-# bind -Tcopy-mode-vi c send -X copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Linux
-#bind -Tcopy-mode-vi y send -X copy-pipe "xclip -sel clip -i"
-#bind -Tcopy-mode-vi c send -X copy-pipe "xclip -sel clip -i"
-
 bind -Tcopy-mode-vi C-v send -X rectangle-toggle
 
 
@@ -154,5 +146,6 @@ set -g @plugin 'robhurring/tmux-uptime'
 set -g @plugin 'decayofmind/tmux-open'
 set -g @open 'x'
 set -g @open-editor 'C-x'
+set -g @plugin 'davidscholberg/tmux-cluster'
 
 run '~/.tmux/plugins/tpm/tpm'
