--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,8 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+bind * select-layout tiled
+
 bind x kill-pane
 set -g base-index 1
 
