Migrated to universal-ctags. Minor improvements.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	excludesfile = /Users/zengeist/.gitignore
-	editor = vim
+	editor = nvim
 [user]
 	name = Roman Komkov
 	useConfigOnly = true
